<resources>
    <string name="app_name">Destination</string>
    <string name="buttonExplore">Explorar destinos</string>
    <string name="buttonFavs">Favoritos</string>
    <string name="buttonRecomend">Recomendaciones</string>
    <string name="TitleExploration">"Destinos filtrados por: "</string>
    <string name="city">city</string>
    <string name="info">info</string>
    <string name="a_adir_a_favoritos">Añadir a favoritos</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="destinos_favritos">Destinos favritos:</string>
    <string name="weather">ciudad no encontrada</string>
    <string name="informaci_n_geogr_fica">Información geográfica</string>
    <string name="recomendaci_n">Recomendación</string>
</resources>