<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_below="@+id/city"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/titleWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informaci_n_geogr_fica"
        android:layout_below="@id/info"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/infoWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:layout_below="@id/titleWeather"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/favsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir_a_favoritos"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>